src/test/contracts/negative/error_subtyping_id.mligo
[@entry]
let main (_p: unit) (_s : unit) : operation list * unit =
  let f : int * bool -> string * bool = fun x -> x in
  ([], ())